--- a/.github/workflows/recomandation.yml
+++ b/.github/workflows/recomandation.yml
@@ -19,7 +19,7 @@ jobs:
             - name: install dependencies
               run: |
                 python -m pip install --upgrade pip
-                pip install -r  
+                pip install -r src/recommendation/requirements.txt
 
     docker: 
         runs-on: ubuntu-docker
